crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_override_specifiers/receive_functions/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single override specifier can be provided.
   ╭─[input.sol:5:41]
   │
 5 │     receive() external payable override override {}
   │                                         ────┬───  
   │                                             ╰───── Error occurred here.
───╯
